@@ -29,8 +29,6 @@
 #
 # WebKit's Python module for interacting with Bugzilla
 
-import getpass
-import platform
 import re
 import subprocess
 import urllib2
@@ -40,6 +38,7 @@ from datetime import datetime # used in timestamp()
 # Import WebKit-specific modules.
 from modules.logging import error, log
 from modules.committers import CommitterList
+from modules.credentials import Credentials
 
 # WebKit includes a built copy of BeautifulSoup in Scripts/modules
 # so this import should always succeed.
@@ -59,39 +58,6 @@ http://wwwsearch.sourceforge.net/mechanize/
 """
     exit(1)
 
-def credentials_from_git():
-    return [read_config("username"), read_config("password")]
-
-def credentials_from_keychain(username=None):
-    if not is_mac_os_x():
-        return [username, None]
-
-    command = "/usr/bin/security %s -g -s %s" % ("find-internet-password", Bugzilla.bug_server_host)
-    if username:
-        command += " -a %s" % username
-
-    log('Reading Keychain for %s account and password.  Click "Allow" to continue...' % Bugzilla.bug_server_host)
-    keychain_process = subprocess.Popen(command, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, shell=True)
-    value = keychain_process.communicate()[0]
-    exit_code = keychain_process.wait()
-
-    if exit_code:
-        return [username, None]
-
-    match = re.search('^\s*"acct"<blob>="(?P<username>.+)"', value, re.MULTILINE)
-    if match:
-        username = match.group('username')
-
-    password = None
-    match = re.search('^password: "(?P<password>.+)"', value, re.MULTILINE)
-    if match:
-        password = match.group('password')
-
-    return [username, password]
-
-def is_mac_os_x():
-    return platform.mac_ver()[0]
-
 def parse_bug_id(message):
     match = re.search("http\://webkit\.org/b/(?P<bug_id>\d+)", message)
     if match:
@@ -101,29 +67,6 @@ def parse_bug_id(message):
         return int(match.group('bug_id'))
     return None
 
-# FIXME: This should not depend on git for config storage
-def read_config(key):
-    # Need a way to read from svn too
-    config_process = subprocess.Popen("git config --get bugzilla.%s" % key, stdout=subprocess.PIPE, shell=True)
-    value = config_process.communicate()[0]
-    return_code = config_process.wait()
-
-    if return_code:
-        return None
-    return value.rstrip('\n')
-
-def read_credentials():
-    (username, password) = credentials_from_git()
-
-    if not username or not password:
-        (username, password) = credentials_from_keychain(username)
-
-    if not username:
-        username = raw_input("Bugzilla login: ")
-    if not password:
-        password = getpass.getpass("Bugzilla password for %s: " % username)
-
-    return [username, password]
 
 def timestamp():
     return datetime.now().strftime("%Y%m%d%H%M%S")
@@ -133,7 +76,7 @@ class BugzillaError(Exception):
     pass
 
 
-class Bugzilla:
+class Bugzilla(object):
     def __init__(self, dryrun=False, committers=CommitterList()):
         self.dryrun = dryrun
         self.authenticated = False
@@ -370,7 +313,7 @@ class Bugzilla:
             self.authenticated = True
             return
 
-        (username, password) = read_credentials()
+        (username, password) = Credentials(self.bug_server_host, git_prefix="bugzilla").read_credentials()
 
         log("Logging in as %s..." % username)
         self.browser.open(self.bug_server_url + "index.cgi?GoAheadAndLogIn=1")
