@@ -37,6 +37,7 @@ from modules.commands.upload_unittest import *
 from modules.commands.queries_unittest import *
 from modules.commands.queues_unittest import *
 from modules.committers_unittest import *
+from modules.credentials_unittest import *
 from modules.cpp_style_unittest import *
 from modules.diff_parser_unittest import *
 from modules.logging_unittest import *
